Add transfer example images to html site with size styling. Not yet responsive.

--- a/index.html
+++ b/index.html
@@ -1,43 +1,39 @@
 <html>
-
   <head>
     <meta charset="UTF-8">
     <title>StencilFlow</title>
 
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <link href="https://fonts.googleapis.com/css?family=Thasadith" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Thasadith" rel="stylesheet">
 
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.dom.min.js"></script>
     <script src="libraries/ml5.min.js"></script>
 
-    <style>
-      img {
-        width: 250px;
-        height: 250px;
-      }
-    </style>
   </head>
 
   <body>
     <div class="body-container">
-      <h1 class="body-container-heading center-text">StencilFlow | Hum Drum to Art</h1>
-      <h2 class="body-container-subheading center-text">Turn your ordinary images into pieces by your favorite artist in 1, 2, Voila!</h2>
+      <h1 class="body-container-heading center-text">STENCIL FLOW    |    Hum Drum to Art</h1>
+      <h2 class="body-container-subheading center-text">Turn your ordinary image into a masterpiece</h2>
       <div class="transfer-container">
         <div class="transfer-container-grid">
+
           <div class="transfer-container-grid-input">
-            <p>Placeholder input</p>
+            <img class="transfer-inputs" src="./images/girlwithpearl.jpg" alt="Girl with Pearl Earring Painting">
           </div>
+
           <div class="transfer-container-grid-style">
-            <p>Placeholder style</p>
+              <img class="transfer-inputs" src="./images/wave.jpg" alt="Wave Painting">
           </div>
+
           <div class="transfer-container-grid-result">
-            <p>Placeholder result</p>
+            <img class="transfer-output" src="./images/girlpearlwaved.png" alt="Girl with Pearl with Wave Style">
           </div>
+
         </div>
       </div>
     </div>
 
   </body>
-
 </html>
