Add try it button with hover styling

--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
 
   <body>
     <div class="body-container">
-      <h1 class="body-container-heading center-text">STENCIL FLOW    |    Hum Drum to Art</h1>
-      <h2 class="body-container-subheading center-text">Turn your ordinary image into a masterpiece</h2>
+      <h1 class="body-container-heading center-text">STENCIL FLOW</h1>
+      <h2 class="body-container-subheading center-text">Turn your ordinary image into a new masterpiece</h2>
       <div class="transfer-container">
         <div class="transfer-container-grid">
-
           <div class="transfer-container-grid-input">
             <img class="transfer-inputs" src="./images/girlwithpearl.jpg" alt="Girl with Pearl Earring Painting">
           </div>
@@ -30,9 +29,10 @@
           <div class="transfer-container-grid-result">
             <img class="transfer-output" src="./images/girlpearlwaved.png" alt="Girl with Pearl with Wave Style">
           </div>
-
         </div>
+
       </div>
+      <button class="try-button">Try it Yourself</button>
     </div>
 
   </body>
