Delete js from transfer.js to use branch

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             <div class="transfer-container-grid-result">
               <img class="transfer-output" src="./images/girlpearlwaved.png" alt="Girl with Pearl with Wave Style">
             </div>
-            
+
           </div>
         </div>
 
-        <button class="try-button">Try it Yourself</button>
+        <button id="try-button">Try it Yourself</button>
       </section>
 
 
