Add section for style transfer with three images for input and three for style

--- a/index.html
+++ b/index.html
@@ -44,8 +44,35 @@
 
 
       <section id="create-transfer">
+        <div class="create-transfer-container">
+          <div class="create-transfer-input-section">
+            <img class="transfer-inputs" src="./images/girlwithpearl.jpg" alt="Girl with Pearl Earring Painting">
+            <div class="thumbnails">
+                <img src="./images/girlwithpearl.jpg" alt="Girl with Pearl Earring Painting">
+                <img src="./images/sunflower.jpg" alt="sunflower painting">
+                <img src="./images/monalisa.jpg" alt="Mona Lisa painting">
+            </div>
+          </div>
+
+          <div class="create-transfer-style-section">
+            <img class="transfer-inputs" src="./images/wave.jpg" alt="Wave Painting">
+            <div class="thumbnails">
+              <img src="./images/wave.jpg" alt="Wave Painting">
+              <img src="./images/rain_princess.jpg" alt="Rain Princess Painting">
+              <img src="./images/starrynight.jpg" alt="Starry Night Painting">
+            </div>
+          </div>
+
+          <div class="create-transfer-result-section">
+              <img class="transfer-output" src="./images/girlpearlwaved.png" alt="Girl with Pearl with Wave Style">
+          </div>
+        </div>
       </section>
 
     </div>
+
+
+
+
   </body>
 </html>
