Comment out fourth thumbnail bc row does not wrap

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
               <img src="./images/wave.jpg" alt="Wave Painting">
               <img src="./images/rain_princess.jpg" alt="Rain Princess Painting">
               <img src="./images/starrynight.jpg" alt="Starry Night Painting">
+              <!-- <img src="./images/la_muse.jpg" alt="La Muse Painting"> -->
             </div>
           </div>
 
