--- a/index.html
+++ b/index.html
@@ -46,16 +46,20 @@
       <section id="create-transfer">
         <div class="create-transfer-container">
           <div class="create-transfer-input-section">
-            <img class="transfer-inputs" src="./images/girlwithpearl.jpg" alt="Girl with Pearl Earring Painting">
+            <img class="transfer-inputs" id="#content-image" src="./images/girlwithpearl.jpg" alt="Girl with Pearl Earring Painting">
             <div class="thumbnails">
                 <img src="./images/girlwithpearl.jpg" alt="Girl with Pearl Earring Painting">
                 <img src="./images/sunflower.jpg" alt="sunflower painting">
                 <img src="./images/monalisa.jpg" alt="Mona Lisa painting">
             </div>
+            <div class="user-add-content">
+              <button id="upload-image-button">Upload an image</button>
+              <button id="use-webcam-button">Use Webcam</button>
+            </div>
           </div>
 
           <div class="create-transfer-style-section">
-            <img class="transfer-inputs" src="./images/wave.jpg" alt="Wave Painting">
+            <img class="transfer-inputs" id="style-image" src="./images/wave.jpg" alt="Wave Painting">
             <div class="thumbnails">
               <img src="./images/wave.jpg" alt="Wave Painting">
               <img src="./images/rain_princess.jpg" alt="Rain Princess Painting">
@@ -74,6 +78,6 @@
 
 
 
-
+    <script src="transfer.js"></script>
   </body>
 </html>
