Comment out result photo in transfer container. Add div element instantiated in js setup

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
           </div>
 
           <div class="create-transfer-result-section">
-              <img class="transfer-output" src="./images/girlpearlwaved.png" alt="Girl with Pearl with Wave Style">
+              <!-- <img class="transfer-output" src="./images/girlpearlwaved.png" alt="Girl with Pearl with Wave Style"> -->
+              <div id="result-image-container">
+              </div>
           </div>
         </div>
       </section>
