--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="user-add-content">
               <input id="uploader" name="inputImgFile" type="file" accept="image/*">
               <button id="upload-image-button" onclick="uploadImage()">Upload an image</button>
-              <button id="use-webcam-button" onclick="useWebcam()">Use Webcam</button>
+              <!-- <button id="use-webcam-button" onclick="useWebcam()">Use Webcam</button> -->
             </div>
           </div>
 
