--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
             </div>
             <div class="user-add-content">
               <input id="uploader" name="inputImgFile" type="file" accept="image/*">
-              <button id="upload-image-button" onclick="uploadImage()">Upload an image</button>
+              <button id="upload-image-button" onClick="uploadImage()">Upload an image</button>
               <!-- <button id="use-webcam-button" onclick="useWebcam()">Use Webcam</button> -->
             </div>
           </div>
 
           <div class="create-transfer-style-section">
-            <img class="transfer-inputs" id="style-image" src="./images/wave.jpg" alt="Wave Painting">
+              <img class="transfer-inputs" id="style-image" src="./images/wave.jpg" alt="Wave Painting">
             <div class="thumbnails">
-              <img src="./images/wave.jpg" alt="Wave Painting">
-              <img src="./images/rain_princess.jpg" alt="Rain Princess Painting">
+              <img src="./images/wave.jpg" alt="Wave Painting" onClick="updateStyleImage(this)">
+              <img src="./images/rain_princess.jpg" alt="Rain Princess Painting" onClick="updateStyleImage(this)">
               <!-- <img src="./images/starrynight.jpg" alt="Starry Night Painting"> -->
-              <img src="./images/la_muse.jpg" alt="La Muse Painting">
+              <img src="./images/la_muse.jpg" alt="La Muse Painting" onClick="updateStyleImage(this)">
             </div>
           </div>
 
