Added id with model name to style imgs in thumbnail section

--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
           <div class="create-transfer-style-section">
               <img class="transfer-inputs" id="style-image" src="./images/wave.jpg" alt="Wave Painting">
             <div class="thumbnails">
-              <img src="./images/wave.jpg" alt="Wave Painting" onClick="updateStyleImage(this)">
-              <img src="./images/rain_princess.jpg" alt="Rain Princess Painting" onClick="updateStyleImage(this)">
-              <!-- <img src="./images/starrynight.jpg" alt="Starry Night Painting"> -->
-              <img src="./images/la_muse.jpg" alt="La Muse Painting" onClick="updateStyleImage(this)">
+              <img src="./images/wave.jpg" alt="Wave Painting" id="wave" onClick="updateStyleImage(this)">
+              <img src="./images/rain_princess.jpg" alt="Rain Princess Painting" id="rain_princess" onClick="updateStyleImage(this)">
+              <img src="./images/la_muse.jpg" alt="La Muse Painting" id="la_muse" onClick="updateStyleImage(this)">
             </div>
           </div>
 
