--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
               <img src="./images/rain_princess.jpg" alt="Rain Princess Painting" id="rain_princess" onClick="updateStyleImage(this)">
               <img src="./images/la_muse.jpg" alt="La Muse Painting" id="la_muse" onClick="updateStyleImage(this)">
             </div>
+            <button onclick="enableTransfer()"> Make it happen!
+            </button>
           </div>
 
           <div class="create-transfer-result-section">
