Add image links with click handlers for styles udnie, wreck, and scream to html style section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
               <img src="./images/wave.jpg" alt="Wave Painting" id="wave" onClick="updateStyleImage(this)">
               <img src="./images/rain_princess.jpg" alt="Rain Princess Painting" id="rain_princess" onClick="updateStyleImage(this)">
               <img src="./images/la_muse.jpg" alt="La Muse Painting" id="la_muse" onClick="updateStyleImage(this)">
+              <img src="./images/scream.jpg" alt="Scream Painting" id="scream" onClick="updateStyleImage(this)">
+              <img src="./images/wreck.jpg" alt="Wreck Painting" id="wreck" onClick="updateStyleImage(this)">
+              <img src="./images/udnie.jpg" alt="Udnie Painting" id="udnie" onClick="updateStyleImage(this)">
             </div>
             <button onclick="enableTransfer()"> Make it happen!
             </button>
