Add additional content images - cat, desert, josephine baker - to html and images folder

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                 <img src="./images/girlwithpearl.jpg" alt="Girl with Pearl Earring Painting">
                 <img src="./images/sunflower.jpg" alt="sunflower painting">
                 <img src="./images/monalisa.jpg" alt="Mona Lisa painting">
+                <img src="./images/josephine-baker.jpg" alt="josephine baker portrait">
+                <img src="./images/cat.jpeg" alt="cat picture">
+                  <img src="./images/desert.jpeg" alt="desert photo">
             </div>
             <div class="user-add-content">
               <input id="uploader" name="inputImgFile" type="file" accept="image/*">
