Change default content image in style transfer from girlwithpearl to kitten photo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <section id="create-transfer">
         <div class="create-transfer-container">
           <div class="create-transfer-input-section">
-            <img class="transfer-inputs" id="content-image" src="./images/girlwithpearl.jpg" alt="Girl with Pearl Earring Painting">
+            <img class="transfer-inputs" id="content-image" src="./images/cat.jpeg" alt="kitten photo">
             <div class="thumbnails">
                 <img src="./images/girlwithpearl.jpg" alt="Girl with Pearl Earring Painting">
                 <img src="./images/sunflower.jpg" alt="sunflower painting">
