Add click handlers to thumbnail imgs in create-transfer-input section of html to updateContentImage

--- a/index.html
+++ b/index.html
@@ -23,19 +23,15 @@
       <section id="example-transfer">
         <div class="transfer-container">
           <div class="transfer-container-grid">
-
             <div class="transfer-container-grid-input">
               <img class="transfer-inputs" src="./images/girlwithpearl.jpg" alt="Girl with Pearl Earring Painting">
             </div>
-
             <div class="transfer-container-grid-style">
                 <img class="transfer-inputs" src="./images/wave.jpg" alt="Wave Painting">
             </div>
-
             <div class="transfer-container-grid-result">
               <img class="transfer-output" src="./images/girlpearlwaved.png" alt="Girl with Pearl with Wave Style">
             </div>
-
           </div>
         </div>
 
@@ -48,12 +44,12 @@
           <div class="create-transfer-input-section">
             <img class="transfer-inputs" id="content-image" src="./images/cat.jpeg" alt="kitten photo">
             <div class="thumbnails">
-                <img src="./images/girlwithpearl.jpg" alt="Girl with Pearl Earring Painting">
-                <img src="./images/sunflower.jpg" alt="sunflower painting">
-                <img src="./images/monalisa.jpg" alt="Mona Lisa painting">
-                <img src="./images/josephine-baker.jpg" alt="josephine baker portrait">
-                <img src="./images/cat.jpeg" alt="cat picture">
-                  <img src="./images/desert.jpeg" alt="desert photo">
+                <img src="./images/girlwithpearl.jpg" alt="Girl with Pearl Earring Painting" onClick="updateContentImage(this)">
+                <img src="./images/sunflower.jpg" alt="sunflower painting" onClick="updateContentImage(this)">
+                <img src="./images/monalisa.jpg" alt="Mona Lisa painting" onClick="updateContentImage(this)">
+                <img src="./images/josephine-baker.jpg" alt="josephine baker portrait" onClick="updateContentImage(this)">
+                <img src="./images/cat.jpeg" alt="cat picture" onClick="updateContentImage(this)">
+                  <img src="./images/desert.jpeg" alt="desert photo" onClick="updateContentImage(this)">
             </div>
             <div class="user-add-content">
               <input id="uploader" name="inputImgFile" type="file" accept="image/*">
