Center selected content image and selected style image

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
       <section id="create-transfer">
         <div class="create-transfer-container">
           <div class="create-transfer-input-section">
-            <img class="transfer-inputs" id="content-image" src="./images/cat.jpeg" alt="kitten photo">
+            <div class="create-transfer-input-image">
+              <img class="transfer-inputs" id="content-image" src="./images/cat.jpeg" alt="kitten photo">
+            </div>
             <div class="thumbnails">
                 <img src="./images/girlwithpearl.jpg" alt="Girl with Pearl Earring Painting" onClick="updateContentImage(this)">
                 <img src="./images/sunflower.jpg" alt="sunflower painting" onClick="updateContentImage(this)">
@@ -59,7 +61,9 @@
           </div>
 
           <div class="create-transfer-style-section">
-              <img class="transfer-inputs" id="style-image" src="./images/wave.jpg" alt="Wave Painting">
+            <div class="create-transfer-style-image">
+                <img class="transfer-inputs" id="style-image" src="./images/wave.jpg" alt="Wave Painting">
+            </div>
             <div class="thumbnails">
               <img src="./images/wave.jpg" alt="Wave Painting" id="wave" onClick="updateStyleImage(this)">
               <img src="./images/rain_princess.jpg" alt="Rain Princess Painting" id="rain_princess" onClick="updateStyleImage(this)">
