Made styling changes to background colors and headings

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 
       <section id="create-transfer">
         <div class="create-transfer-container">
+
           <div class="create-transfer-input-section">
+                <h3 class="center-text">CONTENT</h3>
             <div class="create-transfer-input-image">
               <img class="transfer-inputs" id="content-image" src="./images/cat.jpeg" alt="kitten photo">
             </div>
@@ -55,12 +57,13 @@
             </div>
             <div class="user-add-content">
               <input id="uploader" name="inputImgFile" type="file" accept="image/*">
-              <button id="upload-image-button" onClick="uploadImage()">Upload an image</button>
+              <!-- <button id="upload-image-button" onClick="uploadImage()">Upload an image</button> -->
               <!-- <button id="use-webcam-button" onclick="useWebcam()">Use Webcam</button> -->
             </div>
           </div>
 
           <div class="create-transfer-style-section">
+            <h3 class="center-text">STYLE</h3>
             <div class="create-transfer-style-image">
                 <img class="transfer-inputs" id="style-image" src="./images/wave.jpg" alt="Wave Painting">
             </div>
@@ -77,6 +80,7 @@
           </div>
 
           <div class="create-transfer-result-section">
+            <h3 class="center-text">VOILA!</h3>
               <!-- <img class="transfer-output" src="./images/girlpearlwaved.png" alt="Girl with Pearl with Wave Style"> -->
               <div id="result-image-container">
               </div>
