Change Try button to link to create-transfer section with border and color styling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
           </div>
         </div>
 
-        <button id="try-button">Try it Yourself</button>
+        <!-- <button id="try-button">Try it Yourself</button> -->
+        <a href="#create-transfer" id="try-button">Try it Yourself!</a> 
       </section>
 
 
