--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
       <section id="example-transfer">
-        <div class="transfer-container">
+        <div id="transfer-container">
           <div class="transfer-container-grid">
             <div class="transfer-container-grid-input">
               <img class="transfer-inputs" src="./images/girlwithpearl.jpg" alt="Girl with Pearl Earring Painting">
@@ -35,13 +35,13 @@
           </div>
         </div>
 
-        <!-- <button id="try-button">Try it Yourself</button> -->
-        <a href="#create-transfer" id="try-button">Try it Yourself!</a> 
+        <button id="try-button" onclick="showTransfer()">Try it Yourself</button>
+        <!-- <a href="#create-transfer" id="try-button">Try it Yourself!</a>  -->
       </section>
 
 
       <section id="create-transfer">
-        <div class="create-transfer-container">
+        <div id="create-transfer-container">
 
           <div class="create-transfer-input-section">
                 <h3 class="center-text">CONTENT</h3>
