--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <section id="create-transfer">
         <div id="create-transfer-container">
-
+          <p>Step 1: Pick an image to style or upload your own</p>
           <div class="create-transfer-input-section">
                 <h3 class="center-text">CONTENT</h3>
             <div class="create-transfer-input-image">
@@ -63,6 +63,7 @@
             </div>
           </div>
 
+          <p>Step 2: Pick a style to add to your image</p>
           <div class="create-transfer-style-section">
             <h3 class="center-text">STYLE</h3>
             <div class="create-transfer-style-image">
@@ -76,11 +77,12 @@
               <img src="./images/wreck.jpg" alt="Wreck Painting" id="wreck" onClick="updateStyleImage(this)">
               <img src="./images/udnie.jpg" alt="Udnie Painting" id="udnie" onClick="updateStyleImage(this)">
             </div>
-            <button onclick="enableTransfer()"> Make it happen!
-            </button>
+            <a href="#create-transfer-result-section"><button onclick="enableTransfer()"> Make it happen!
+            </button></a>
           </div>
 
-          <div class="create-transfer-result-section">
+            <p>Step 3: Marvel at your creation!</p>
+          <div id="create-transfer-result-section">
             <h3 class="center-text">VOILA!</h3>
               <!-- <img class="transfer-output" src="./images/girlpearlwaved.png" alt="Girl with Pearl with Wave Style"> -->
               <div id="result-image-container">
