--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
 
       <section id="create-transfer">
         <div id="create-transfer-container">
-          <p>Step 1: Pick an image to style or upload your own</p>
+
           <div class="create-transfer-input-section">
                 <h3 class="center-text">CONTENT</h3>
+                <p class="center-text instructions">Step 1: Pick an image to style or upload your own</p>
             <div class="create-transfer-input-image">
               <img class="transfer-inputs" id="content-image" src="./images/cat.jpeg" alt="kitten photo">
             </div>
@@ -63,9 +64,10 @@
             </div>
           </div>
 
-          <p>Step 2: Pick a style to add to your image</p>
+
           <div class="create-transfer-style-section">
             <h3 class="center-text">STYLE</h3>
+            <p class="center-text instructions">Step 2: Pick a style to add to your image</p>
             <div class="create-transfer-style-image">
                 <img class="transfer-inputs" id="style-image" src="./images/wave.jpg" alt="Wave Painting">
             </div>
@@ -81,9 +83,9 @@
             </button></a>
           </div>
 
-            <p>Step 3: Marvel at your creation!</p>
           <div id="create-transfer-result-section">
             <h3 class="center-text">VOILA!</h3>
+            <p class="center-text instructions">Step 3: Marvel at your creation!</p>
               <!-- <img class="transfer-output" src="./images/girlpearlwaved.png" alt="Girl with Pearl with Wave Style"> -->
               <div id="result-image-container">
               </div>
