Add download link to html for user to save result image. Add question mark image to images folder

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
               <!-- <img class="transfer-output" src="./images/girlpearlwaved.png" alt="Girl with Pearl with Wave Style"> -->
               <div id="result-image-container">
               </div>
+              <a href="/images/udnie.jpg" download="myStyleTransfer">Download Image</a>
           </div>
         </div>
       </section>
