--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
             <h3 class="center-text">VOILA!</h3>
             <p class="center-text instructions">Step 3: Marvel at your creation!</p>
               <!-- <img class="transfer-output" src="./images/girlpearlwaved.png" alt="Girl with Pearl with Wave Style"> -->
-              <div id="result-image-container">
-              </div>
-              <div class="button-section">
-                <button id="download-button" onclick="saveResultImage()">Download Image</button>
+            <div id="result-image-container">
             </div>
+            <!-- <div class="button-section">
+              <button id="download-button" onclick="saveResultImage()">Download Image</button>
+            </div> -->
           </div>
         </div>
       </section>
