Uncomment webcam onclick in html. Add js function useWebcam

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <label for="uploader">Upload an image: </label>
               <input id="uploader" name="inputImgFile" type="file" accept="image/*">
               <!-- <button id="upload-image-button" onClick="uploadImage()">Upload an image</button> -->
-              <!-- <button id="use-webcam-button" onclick="useWebcam()">Use Webcam</button> -->
+              <button id="use-webcam-button" onclick="useWebcam()">Use Webcam</button>
             </div>
           </div>
 
