Add webcam capture with p5 instead of javascript code. Hide static image to show capture in its place when webcam button clicked

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="create-transfer-input-section">
                 <h3 class="center-text">CONTENT</h3>
                 <p class="center-text instructions">Step 1: Pick an image to style or upload your own</p>
-            <div class="create-transfer-input-image">
+            <div id="create-transfer-input-image">
               <img class="transfer-inputs" id="content-image" src="./images/cat.jpeg" alt="kitten photo">
             </div>
             <div class="thumbnails">
