Change transfer input button to links with styling. Add cursor change to clickable items

--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
                     <img src="./images/desert.jpeg" alt="desert photo" onClick="updateContentImage(this)">
               </div>
               <div class="button-section">
-                <label for="uploader">Upload an image: </label>
+                <!-- <label for="uploader">Upload an image: </label> -->
                 <input id="uploader" name="inputImgFile" type="file" accept="image/*">
+                <div class = "link" onclick="uploadImage()">Upload an image </div>
                 <!-- <button id="upload-image-button" onClick="uploadImage()">Upload an image</button> -->
-                <button id="use-webcam-button" onclick="useWebcam()">Use Webcam</button>
+                <!-- <button id="use-webcam-button" onclick="useWebcam()">Use Webcam</button> -->
+                <div class="link" onclick="useWebcam()">Use Webcam </div>
               </div>
             </div>
 
