Button and link styling for link, visited, hover

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                 <img src="./images/udnie.jpg" alt="Udnie Painting" id="udnie" onClick="updateStyleImage(this)">
               </div>
               <div class="button-section">
-                <a href="#create-transfer-result-section"><button onclick="enableTransfer()"> Make it happen!
+                <a href="#create-transfer-result-section">
+                  <button class="transfer-button" onclick="enableTransfer()"> Paint a picture!
                 </button></a>
             </div>
             </div>
