--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               </div>
               <div class="button-section">
                 <a href="#create-transfer-result-section">
-                  <button class="transfer-button" onclick="enableTransfer()"> Paint a picture!
+                  <button id="transfer-button" onclick="enableTransfer()"> Paint a picture!
                 </button></a>
             </div>
             </div>
