Edits page subheading text so not calling famous works ordinary

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <h1 class="heading center-text">STENCIL FLOW</h1>
-      <h2 class="subheading center-text">Turn your ordinary image into a new masterpiece</h2>
+      <h2 class="subheading center-text">Transform your image into a new masterpiece</h2>
     </header>
     <main>
         <section id="example-transfer">
