Changes splash page images from Girl with Pearl + Wave to Jimi Hendrix + Rain

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
           <div id="example-transfer-container">
             <div class="example-transfer-grid">
               <div class="example-transfer-grid-input">
-                <img class="transfer-inputs" src="./images/girlwithpearl.jpg" alt="Girl with Pearl Earring Painting">
+                <img class="transfer-inputs" src="./images/jimi_hendrix.jpeg" alt="Photo of Jimi Hendrix">
               </div>
               <div class="example-transfer-grid-style">
-                  <img class="transfer-inputs" src="./images/wave.jpg" alt="Wave Painting">
+                  <img class="transfer-inputs" src="./images/rain_princess.jpg" alt="Rain Princess Painting">
               </div>
               <div class="example-transfer-grid-result">
-                <img class="transfer-output" src="./images/girlpearlwaved.png" alt="Girl with Pearl with Wave Style">
+                <img class="transfer-output" src="./images/jimi_rain.png" alt="Jimi Hendrix with Rain Princess style">
               </div>
             </div>
             <button id="try-button" onclick="showTransfer()">Try it Yourself</button>
