Reduces size of try button and centers on page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                 <p class="instructions" id="result-instr"> Marvel at your creation! </p>
               </div>
             </div>
-            <button id="try-button" onclick="showTransfer()">Try it Yourself</button>
+            <div id="try-container">
+              <button id="try-button" onclick="showTransfer()">Try it Yourself</button>
+            </div>
           </div>
 
 
